# Stkpp_app

./: .env.example  .gitignore  .replit  README.md  Read.md  pyproject.toml  render.yaml  replit.md  start.sh
backend/: app.py  requirements.txt
backend/services/: analysis_service.py  prediction_service.py  stock_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisPanel.jsx  Header.jsx  LivePrice.jsx  LoadingSpinner.jsx  PredictionPanel.jsx  PriceChart.jsx  SearchBar.jsx  StockCard.jsx
frontend/src/services/: api.js
